--- a/.github/workflows/blogfeed.yaml
+++ b/.github/workflows/blogfeed.yaml
@@ -2,7 +2,8 @@ name: Latest MikkiPastel blog post workflow
 on:
   schedule:
     # Runs every day
-    - cron: '0 0 * * *'
+    #- cron: '0 0 * * *'
+    - cron: '26 19 * * *'
   workflow_dispatch:
 
 jobs:
