Update library workflow

--- a/.github/workflows/blogfeed.yaml
+++ b/.github/workflows/blogfeed.yaml
@@ -7,17 +7,20 @@ on:
 
 jobs:
   update-readme-with-blog:
-    name: Update this repo's README with latest blog posts
+    name: Update this repo\'s README with latest blog posts
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: gautamkrishnar/blog-post-workflow@master
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Update blog from mikkipastel.com
+        uses: gautamkrishnar/blog-post-workflow@v1
         with:
           comment_tag_name: "BLOG"
           feed_list: "https://www.mikkipastel.com/rss/"
           commit_message: "Update mikkipastel.com blog posts"
           gh_token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: gautamkrishnar/blog-post-workflow@master
+      - name: Update blog from medium
+        uses: gautamkrishnar/blog-post-workflow@v1
         with:
           comment_tag_name: "MEDIUM"
           feed_list: "https://medium.com/feed/@minseobingsu"
