--- a/.github/workflows/blogfeed.yaml
+++ b/.github/workflows/blogfeed.yaml
@@ -13,11 +13,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Update blog from mikkipastel.com
-        uses: gautamkrishnar/blog-post-workflow@v1
+        uses: gautamkrishnar/blog-post-workflow@1.9.4
         with:
           comment_tag_name: "BLOG"
           feed_list: "https://www.mikkipastel.com/rss/"
-          user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36"
           commit_message: "Update mikkipastel.com blog posts"
           gh_token: ${{ secrets.GITHUB_TOKEN }}
   update-readme-with-medium:
@@ -27,9 +26,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Update blog from medium
-        uses: gautamkrishnar/blog-post-workflow@v1
+        uses: gautamkrishnar/blog-post-workflow@1.9.4
         with:
           comment_tag_name: "MEDIUM"
           feed_list: "https://medium.com/feed/@minseobingsu"
           commit_message: "Update medium.com blog posts"
           gh_token: ${{ secrets.GITHUB_TOKEN }}
+  update-readme-with-youtube:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Update video from youtube
+      uses: gautamkrishnar/blog-post-workflow@1.9.4
+      with:
+        channel_id: MikkiPastel
+        readme_path: ./README.md
+        commit_message: "Update youtube.com video"
+        gh_token: ${{ secrets.GITHUB_TOKEN }}
