--- a/.github/workflows/blogfeed.yaml
+++ b/.github/workflows/blogfeed.yaml
@@ -29,6 +29,18 @@ jobs:
         uses: gautamkrishnar/blog-post-workflow@1.9.4
         with:
           comment_tag_name: "MEDIUM"
-          feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCOnNvgkW2wmQXMuUfKVTmWQ"
+          feed_list: "https://medium.com/feed/@minseobingsu"
           commit_message: "Update medium.com blog posts"
           gh_token: ${{ secrets.GITHUB_TOKEN }}
+  update-readme-with-youtube:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Update video from youtube
+      uses: gautamkrishnar/blog-post-workflow@1.9.4
+      with:
+        feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCtvnB6R__6vdyjUEbDgAWHw"
+        comment_tag_name: "YOUTUBE"
+        commit_message: "Update youtube.com video"
+        gh_token: ${{ secrets.GITHUB_TOKEN }}
