hide border and move stat card to same link

--- a/.github/workflows/stat.yaml
+++ b/.github/workflows/stat.yaml
@@ -15,14 +15,14 @@ jobs:
         uses: readme-tools/github-readme-stats-action@v1.1.0
         with:
           card: stats
-          options: username=${{ github.repository_owner }}&count_private=true&theme=tokyonight&show_icons=true&rank_icon=github&include_all_commits=true
+          options: username=${{ github.repository_owner }}&count_private=true&theme=tokyonight&show_icons=true&rank_icon=github&include_all_commits=true&hide_border=true
           path: profile/stats.svg
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate top languages card
         uses: readme-tools/github-readme-stats-action@v1.1.0
         with:
           card: top-langs
-          options: username=${{ github.repository_owner }}&layout=compact&langs_count=10&0&theme=tokyonight
+          options: username=${{ github.repository_owner }}&layout=compact&langs_count=8&theme=tokyonight&hide_border=true
           path: profile/top-langs.svg
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Commit cards
